[package]
name = "rust-react"
version = "0.0.1"
authors = ["Yujian Yao"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.44"
downcast-rs = "1.2.0"
im-rc = "15.0.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Text',
  'console',
  'Event',
  'EventTarget',
  'HtmlInputElement',
  'CssStyleDeclaration',
  'KeyboardEvent'
]

[profile.release]
debug = true